--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ th, td {
 }
 
 /* Unique colors for every header cell */
-th:nth-child(1) { background-color: #ffb3ba; font-color: #9D00FF;}
+th:nth-child(1) { background-color: #ffb3ba; color: #9D00FF;}
 th:nth-child(2) { background-color: #ffdfba; }
 th:nth-child(3) { background-color: #ffffba; }
 th:nth-child(4) { background-color: #baffc9; }
